--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Flask = "^2.2.0"
 urllib3 = "^1.26.12"
 flask-sqlalchemy = "^3.0.2"
 app = "^0.0.1"
+SQLAlchemy = "^1.4.44"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
